src.new/python/pysuv/srcn/src/uv.pxd

from libc.stdint cimport *
from libc.stddef cimport *
from libc.stdio cimport *

cdef extern from "../includes/uv.h":
    """
    #ifndef UV_H
    #define UV_H
    #ifdef __cplusplus
    extern "C" {
    #endif

    #if defined(BUILDING_UV_SHARED) && 1
    #error "Define either BUILDING_UV_SHARED or USING_UV_SHARED, not both."
    #endif

    #ifndef UV_EXTERN
    #ifdef _WIN32
      /* Windows - set up dll import/export decorators. */
    # if defined(BUILDING_UV_SHARED)
        /* Building shared library. */
    #   define UV_EXTERN __declspec(dllexport)
    # elif 1
        /* Using shared library. */
    #   define UV_EXTERN __declspec(dllimport)
    # else
        /* Building static library. */
    #   define UV_EXTERN /* nothing */
    # endif
    #elif __GNUC__ >= 4
    # define UV_EXTERN __attribute__((visibility("default")))
    #elif defined(__SUNPRO_C) && (__SUNPRO_C >= 0x550) /* Sun Studio >= 8 */
    # define UV_EXTERN __global
    #else
    # define UV_EXTERN /* nothing */
    #endif
    #endif /* UV_EXTERN */
    """
    cdef struct uv__queue:
        cdef struct uv__queue* next
        cdef struct uv__queue* prev

    """
    /* Expand this list if necessary. */
    #define UV_ERRNO_MAP(XX)                                                      \
      XX(E2BIG, "argument list too long")                                         \
      XX(EACCES, "permission denied")                                             \
      XX(EADDRINUSE, "address already in use")                                    \
      XX(EADDRNOTAVAIL, "address not available")                                  \
      XX(EAFNOSUPPORT, "address family not supported")                            \
      XX(EAGAIN, "resource temporarily unavailable")                              \
      XX(EAI_ADDRFAMILY, "address family not supported")                          \
      XX(EAI_AGAIN, "temporary failure")                                          \
      XX(EAI_BADFLAGS, "bad ai_flags value")                                      \
      XX(EAI_BADHINTS, "invalid value for hints")                                 \
      XX(EAI_CANCELED, "request canceled")                                        \
      XX(EAI_FAIL, "permanent failure")                                           \
      XX(EAI_FAMILY, "ai_family not supported")                                   \
      XX(EAI_MEMORY, "out of memory")                                             \
      XX(EAI_NODATA, "no address")                                                \
      XX(EAI_NONAME, "unknown node or service")                                   \
      XX(EAI_OVERFLOW, "argument buffer overflow")                                \
      XX(EAI_PROTOCOL, "resolved protocol is unknown")                            \
      XX(EAI_SERVICE, "service not available for socket type")                    \
      XX(EAI_SOCKTYPE, "socket type not supported")                               \
      XX(EALREADY, "connection already in progress")                              \
      XX(EBADF, "bad file descriptor")                                            \
      XX(EBUSY, "resource busy or locked")                                        \
      XX(ECANCELED, "operation canceled")                                         \
      XX(ECHARSET, "invalid Unicode character")                                   \
      XX(ECONNABORTED, "software caused connection abort")                        \
      XX(ECONNREFUSED, "connection refused")                                      \
      XX(ECONNRESET, "connection reset by peer")                                  \
      XX(EDESTADDRREQ, "destination address required")                            \
      XX(EEXIST, "file already exists")                                           \
      XX(EFAULT, "bad address in system call argument")                           \
      XX(EFBIG, "file too large")                                                 \
      XX(EHOSTUNREACH, "host is unreachable")                                     \
      XX(EINTR, "interrupted system call")                                        \
      XX(EINVAL, "invalid argument")                                              \
      XX(EIO, "i/o error")                                                        \
      XX(EISCONN, "socket is already connected")                                  \
      XX(EISDIR, "illegal operation on a directory")                              \
      XX(ELOOP, "too many symbolic links encountered")                            \
      XX(EMFILE, "too many open files")                                           \
      XX(EMSGSIZE, "message too long")                                            \
      XX(ENAMETOOLONG, "name too long")                                           \
      XX(ENETDOWN, "network is down")                                             \
      XX(ENETUNREACH, "network is unreachable")                                   \
      XX(ENFILE, "file table overflow")                                           \
      XX(ENOBUFS, "no buffer space available")                                    \
      XX(ENODEV, "no such device")                                                \
      XX(ENOENT, "no such file or directory")                                     \
      XX(ENOMEM, "not enough memory")                                             \
      XX(ENONET, "machine is not on the network")                                 \
      XX(ENOPROTOOPT, "protocol not available")                                   \
      XX(ENOSPC, "no space left on device")                                       \
      XX(ENOSYS, "function not implemented")                                      \
      XX(ENOTCONN, "socket is not connected")                                     \
      XX(ENOTDIR, "not a directory")                                              \
      XX(ENOTEMPTY, "directory not empty")                                        \
      XX(ENOTSOCK, "socket operation on non-socket")                              \
      XX(ENOTSUP, "operation not supported on socket")                            \
      XX(EOVERFLOW, "value too large for defined data type")                      \
      XX(EPERM, "operation not permitted")                                        \
      XX(EPIPE, "broken pipe")                                                    \
      XX(EPROTO, "protocol error")                                                \
      XX(EPROTONOSUPPORT, "protocol not supported")                               \
      XX(EPROTOTYPE, "protocol wrong type for socket")                            \
      XX(ERANGE, "result too large")                                              \
      XX(EROFS, "read-only file system")                                          \
      XX(ESHUTDOWN, "cannot send after transport endpoint shutdown")              \
      XX(ESPIPE, "invalid seek")                                                  \
      XX(ESRCH, "no such process")                                                \
      XX(ETIMEDOUT, "connection timed out")                                       \
      XX(ETXTBSY, "text file is busy")                                            \
      XX(EXDEV, "cross-device link not permitted")                                \
      XX(UNKNOWN, "unknown error")                                                \
      XX(EOF, "end of file")                                                      \
      XX(ENXIO, "no such device or address")                                      \
      XX(EMLINK, "too many links")                                                \
      XX(EHOSTDOWN, "host is down")                                               \
      XX(EREMOTEIO, "remote I/O error")                                           \
      XX(ENOTTY, "inappropriate ioctl for device")                                \
      XX(EFTYPE, "inappropriate file type or format")                             \
      XX(EILSEQ, "illegal byte sequence")                                         \
      XX(ESOCKTNOSUPPORT, "socket type not supported")                            \
      XX(ENODATA, "no data available")                                            \
      XX(EUNATCH, "protocol driver not attached")                                 \

    #define UV_HANDLE_TYPE_MAP(XX)                                                \
      XX(ASYNC, async)                                                            \
      XX(CHECK, check)                                                            \
      XX(FS_EVENT, fs_event)                                                      \
      XX(FS_POLL, fs_poll)                                                        \
      XX(HANDLE, handle)                                                          \
      XX(IDLE, idle)                                                              \
      XX(NAMED_PIPE, pipe)                                                        \
      XX(POLL, poll)                                                              \
      XX(PREPARE, prepare)                                                        \
      XX(PROCESS, process)                                                        \
      XX(STREAM, stream)                                                          \
      XX(TCP, tcp)                                                                \
      XX(TIMER, timer)                                                            \
      XX(TTY, tty)                                                                \
      XX(UDP, udp)                                                                \
      XX(SIGNAL, signal)                                                          \

    #define UV_REQ_TYPE_MAP(XX)                                                   \
      XX(REQ, req)                                                                \
      XX(CONNECT, connect)                                                        \
      XX(WRITE, write)                                                            \
      XX(SHUTDOWN, shutdown)                                                      \
      XX(UDP_SEND, udp_send)                                                      \
      XX(FS, fs)                                                                  \
      XX(WORK, work)                                                              \
      XX(GETADDRINFO, getaddrinfo)                                                \
      XX(GETNAMEINFO, getnameinfo)                                                \
      XX(RANDOM, random)                                                          \

    typedef enum {
    #define XX(code, _) UV_ ## code = UV__ ## code,
      UV_ERRNO_MAP(XX)
    #undef XX
      UV_ERRNO_MAX = UV__EOF - 1
    } uv_errno_t    

    typedef enum {
      UV_UNKNOWN_HANDLE = 0,
    #define XX(uc, lc) UV_##uc,
      UV_HANDLE_TYPE_MAP(XX)
    #undef XX
      UV_FILE,
      UV_HANDLE_TYPE_MAX
    } uv_handle_type    

    typedef enum {
      UV_UNKNOWN_REQ = 0,
    #define XX(uc, lc) UV_##uc,
      UV_REQ_TYPE_MAP(XX)
    #undef XX
      UV_REQ_TYPE_PRIVATE
      UV_REQ_TYPE_MAX
    } uv_req_type    
    """
    
    ctypedef struct uv_loop_s uv_loop_t
    ctypedef struct uv_handle_s uv_handle_t
    ctypedef struct uv_dir_s uv_dir_t
    ctypedef struct uv_stream_s uv_stream_t
    ctypedef struct uv_tcp_s uv_tcp_t
    ctypedef struct uv_udp_s uv_udp_t
    ctypedef struct uv_pipe_s uv_pipe_t
    ctypedef struct uv_tty_s uv_tty_t
    ctypedef struct uv_poll_s uv_poll_t
    ctypedef struct uv_timer_s uv_timer_t
    ctypedef struct uv_prepare_s uv_prepare_t
    ctypedef struct uv_check_s uv_check_t
    ctypedef struct uv_idle_s uv_idle_t
    ctypedef struct uv_async_s uv_async_t
    ctypedef struct uv_process_s uv_process_t
    ctypedef struct uv_fs_event_s uv_fs_event_t
    ctypedef struct uv_fs_poll_s uv_fs_poll_t
    ctypedef struct uv_signal_s uv_signal_t
